Metadata Root Complete

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Web Application</title>
+    <link rel="icon" href="assets/icon/icons8-user-menu-male-80.png">
+    <meta name="keyword" content="web application,Softer Engineer,Imesh Hirushan,">
+    <meta name="description" content="Web application">
+    <meta name="viewport" content="width-device-width initial-scale=1">
+    <meta name="theme-color" content="#FFA502">
+
+
 </head>
-<body>
 
-<h1>Institute of Software Engineering</h1>
-<h2>Batch - GDSE 57-58</h2>
-<h2>Hello there..!</h2>
-
-</body>
 </html>
