Third Page DONE

--- a/index.html
+++ b/index.html
@@ -11,32 +11,88 @@
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-<!-- Header Bar -->
-<header>
-    <nav>
-        <ul>
-            <li>Home</li>
-            <li>About Me</li>
-            <li>Skills</li>
-            <li>Projects</li>
-            <li>Activities</li>
-            <li>Contacts</li>
+
+<section class="coverPage">
+    <img alt="" src="assets/images/social/coverMain.png">
+    <div class="headerText">
+        <nav class="naviHeader">
+            <ul class="ulHeader">
+                <li class="liHeader">Home</li>
+                <li class="liHeader">About Me</li>
+                <li class="liHeader">Skills</li>
+                <li class="liHeader">Projects</li>
+                <li class="liHeader">Activities</li>
+                <li class="liHeader">Contacts</li>
+            </ul>
+        </nav>
+    </div>
+
+    <img id="proPic" alt="" src="assets/images/social/mypic.jpeg" width="300px">
+
+    <div id="myName">
+        <div id="fistName"><h1>Hi, I'm</h1></div>
+        <span> <h1>Imesh Hirushan</h1></span>
+        <div id="lastName"><h4>Software Engineer</h4></div>
+    </div>
+</section>
+
+<!-- About Me -->
+<!--<section class="headerText">
+    <div class="coverPage">
+        <img src="assets/images/social/coverpages.png" alt="">
+    </div>
+    <nav class="naviHeader">
+        <ul class="ulHeader">
+            <li class="liHeader">Home</li>
+            <li class="liHeader">About Me</li>
+            <li class="liHeader">Skills</li>
+            <li class="liHeader">Projects</li>
+            <li class="liHeader">Activities</li>
+            <li class="liHeader">Contacts</li>
         </ul>
     </nav>
-</header>
-<!-- Home -->
-<main>
-    <section id="home">
-        <div id="profile">
-        </div>
-        <div id="myName">
-            <div id="fistName"><h1>Hi, I'm</h1></div>
-            <span> <h1>Imesh Hirushan</h1></span>
-            <div id="lastName"><h4>Software Engineer</h4></div>
-        </div>
-    </section>
 
-</main>
+    <div id="aboutMePic">
+        <img src="assets/images/social/aboutMePic.JPG" alt="" width="300px" border="5" >
+    </div>
+</section>-->
+<section class="coverPage">
+    <img src="assets/images/social/coverpages.png" alt="">
+    <div class="headerText">
+        <nav class="secondNavHeaderText">
+            <ul class="ulHeader">
+                <li class="liHeader">Home</li>
+                <li class="liHeader">About Me</li>
+                <li class="liHeader">Skills</li>
+                <li class="liHeader">Projects</li>
+                <li class="liHeader">Activities</li>
+                <li class="liHeader">Contacts</li>
+            </ul>
+        </nav>
+    </div>
+</section>
+
+<!--Skills-->
+<section class="coverPage">
+    <img src="assets/images/social/coverpages.png" alt="">
+    <div class="headerText">
+        <nav class="secondNavHeaderText">
+            <ul class="ulHeader">
+                <li class="liHeader">Home</li>
+                <li class="liHeader">About Me</li>
+                <li class="liHeader">Skills</li>
+                <li class="liHeader">Projects</li>
+                <li class="liHeader">Activities</li>
+                <li class="liHeader">Contacts</li>
+            </ul>
+        </nav>
+    </div>
+</section>
+
+<!--Projects-->
+<section></section>
+<section></section>
+<section></section>
 
 </body>
 
