--- a/index.html
+++ b/index.html
@@ -90,9 +90,55 @@
 </section>
 
 <!--Projects-->
-<section></section>
-<section></section>
-<section></section>
+<section class="coverPage">
+    <img src="assets/images/social/coverpages.png" alt="">
+    <div class="headerText">
+        <nav class="secondNavHeaderText">
+            <ul class="ulHeader">
+                <li class="liHeader">Home</li>
+                <li class="liHeader">About Me</li>
+                <li class="liHeader">Skills</li>
+                <li class="liHeader">Projects</li>
+                <li class="liHeader">Activities</li>
+                <li class="liHeader">Contacts</li>
+            </ul>
+        </nav>
+    </div>
+</section>
+
+<!--Activities-->
+<section class="coverPage">
+    <img src="assets/images/social/coverpages.png" alt="">
+    <div class="headerText">
+        <nav class="secondNavHeaderText">
+            <ul class="ulHeader">
+                <li class="liHeader">Home</li>
+                <li class="liHeader">About Me</li>
+                <li class="liHeader">Skills</li>
+                <li class="liHeader">Projects</li>
+                <li class="liHeader">Activities</li>
+                <li class="liHeader">Contacts</li>
+            </ul>
+        </nav>
+    </div>
+</section>
+
+<!--Contacts-->
+<section class="coverPage">
+    <img src="assets/images/social/coverpages.png" alt="">
+    <div class="headerText">
+        <nav class="secondNavHeaderText">
+            <ul class="ulHeader">
+                <li class="liHeader">Home</li>
+                <li class="liHeader">About Me</li>
+                <li class="liHeader">Skills</li>
+                <li class="liHeader">Projects</li>
+                <li class="liHeader">Activities</li>
+                <li class="liHeader">Contacts</li>
+            </ul>
+        </nav>
+    </div>
+</section>
 
 </body>
 
