--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
     </div>
 
-    <img id="proPic" alt="" src="assets/images/social/mypic.jpeg" width="300px">
+    <img alt="" id="proPic" src="assets/images/social/mypic.jpeg">
 
     <div id="myName">
         <div id="fistName"><h1>Hi, I'm</h1></div>
@@ -37,27 +37,8 @@
 </section>
 
 <!-- About Me -->
-<!--<section class="headerText">
-    <div class="coverPage">
-        <img src="assets/images/social/coverpages.png" alt="">
-    </div>
-    <nav class="naviHeader">
-        <ul class="ulHeader">
-            <li class="liHeader">Home</li>
-            <li class="liHeader">About Me</li>
-            <li class="liHeader">Skills</li>
-            <li class="liHeader">Projects</li>
-            <li class="liHeader">Activities</li>
-            <li class="liHeader">Contacts</li>
-        </ul>
-    </nav>
-
-    <div id="aboutMePic">
-        <img src="assets/images/social/aboutMePic.JPG" alt="" width="300px" border="5" >
-    </div>
-</section>-->
 <section class="coverPage">
-    <img src="assets/images/social/coverpages.png" alt="">
+    <img alt="" src="assets/images/social/coverpages.png">
     <div class="headerText">
         <nav class="secondNavHeaderText">
             <ul class="ulHeader">
@@ -70,11 +51,31 @@
             </ul>
         </nav>
     </div>
+    <div>
+        <img alt="" id="aboutMePic" src="assets/images/social/aboutMePic.JPG" width="300">
+    </div>
+
+    <div id="info">
+        <pre>
+            <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Imesh Hirushan</b></span> I am from Sri Lanka and I am a programmer,
+            designer, and developer. I study at the Institute of Java and Software
+            Engineering (IJSE).Also, my school is St. John's College, Panadura.
+            Currently studying web application development. I have a good
+            knowledge of Programming Fundamental, DBMS, OOP, SE, MVC,
+            and Layered Architectures.
+        </pre>
+
+        <!-- Download CV Btn -->
+        <button id="btnCv">
+            <span> <a download="myCv" href="assets/images/pdf/THARINDU%20IMESH%20CV.pdf">Download CV</a></span>
+        </button>
+    </div>
+
 </section>
 
 <!--Skills-->
 <section class="coverPage">
-    <img src="assets/images/social/coverpages.png" alt="">
+    <img alt="" src="assets/images/social/coverpages.png">
     <div class="headerText">
         <nav class="secondNavHeaderText">
             <ul class="ulHeader">
@@ -91,7 +92,7 @@
 
 <!--Projects-->
 <section class="coverPage">
-    <img src="assets/images/social/coverpages.png" alt="">
+    <img alt="" src="assets/images/social/coverpages.png">
     <div class="headerText">
         <nav class="secondNavHeaderText">
             <ul class="ulHeader">
@@ -108,7 +109,7 @@
 
 <!--Activities-->
 <section class="coverPage">
-    <img src="assets/images/social/coverpages.png" alt="">
+    <img alt="" src="assets/images/social/coverpages.png">
     <div class="headerText">
         <nav class="secondNavHeaderText">
             <ul class="ulHeader">
@@ -125,7 +126,7 @@
 
 <!--Contacts-->
 <section class="coverPage">
-    <img src="assets/images/social/coverpages.png" alt="">
+    <img alt="" src="assets/images/social/coverpages.png">
     <div class="headerText">
         <nav class="secondNavHeaderText">
             <ul class="ulHeader">
