--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
         <span> <h1>Imesh Hirushan</h1></span>
         <div id="lastName"><h4>Software Engineer</h4></div>
     </div>
+
+    <div id="iconPic">
+        <a href="https://www.facebook.com/imesh.hirushan.98"> <img src="assets/images/icon/faceBook.png" alt=""></a>
+        <a href="https://www.instagram.com/_imesh_hirushan_/"> <img src="assets/images/icon/instagram.png" alt=""></a>
+        <a href="https://twitter.com/imesh_57"> <img src="assets/images/icon/twitter.png" alt=""></a>
+        <a href="https://www.linkedin.com/in/imesh-hirushan-b2aab1224/"> <img src="assets/images/icon/linkIn.png" alt=""></a>
+        <a href="https://github.com/imeshhirushan2117"> <img src="assets/images/icon/github.png" alt=""></a>
+        <a href="https://www.pinterest.com/imeshhirushan/_saved/"> <img src="assets/images/icon/pinterest.png" alt=""></a>
+    </div>
+
 </section>
 
 <!-- About Me -->
