pages navigation Done

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-
-<section class="coverPage">
+<!--=====home======-->
+<section class="coverPage" id="home">
     <img alt="" src="assets/images/social/coverMain.png">
     <div class="headerText">
         <nav class="naviHeader">
             <ul class="ulHeader">
-                <li class="liHeader">Home</li>
-                <li class="liHeader">About Me</li>
-                <li class="liHeader">Skills</li>
-                <li class="liHeader">Projects</li>
-                <li class="liHeader">Activities</li>
-                <li class="liHeader">Contacts</li>
+                <li class="liHeader"><a href="#home">Home</a></li>
+                <li class="liHeader"><a href="#aboutMe">About Me</a></li>
+                <li class="liHeader"><a href="#skill">Skills</a></li>
+                <li class="liHeader"><a href="#projects">Projects</a></li>
+                <li class="liHeader"><a href="#activities">Activities</a></li>
+                <li class="liHeader"><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
     </div>
@@ -36,28 +36,30 @@
     </div>
 
     <div id="iconPic">
-        <a href="https://www.facebook.com/imesh.hirushan.98"> <img src="assets/images/icon/faceBook.png" alt=""></a>
-        <a href="https://www.instagram.com/_imesh_hirushan_/"> <img src="assets/images/icon/instagram.png" alt=""></a>
-        <a href="https://twitter.com/imesh_57"> <img src="assets/images/icon/twitter.png" alt=""></a>
-        <a href="https://www.linkedin.com/in/imesh-hirushan-b2aab1224/"> <img src="assets/images/icon/linkIn.png" alt=""></a>
-        <a href="https://github.com/imeshhirushan2117"> <img src="assets/images/icon/github.png" alt=""></a>
-        <a href="https://www.pinterest.com/imeshhirushan/_saved/"> <img src="assets/images/icon/pinterest.png" alt=""></a>
+        <a href="https://www.facebook.com/imesh.hirushan.98"> <img alt="" src="assets/images/icon/faceBook.png"></a>
+        <a href="https://www.instagram.com/_imesh_hirushan_/"> <img alt="" src="assets/images/icon/instagram.png"></a>
+        <a href="https://twitter.com/imesh_57"> <img alt="" src="assets/images/icon/twitter.png"></a>
+        <a href="https://www.linkedin.com/in/imesh-hirushan-b2aab1224/"> <img alt=""
+                                                                              src="assets/images/icon/linkIn.png"></a>
+        <a href="https://github.com/imeshhirushan2117"> <img alt="" src="assets/images/icon/github.png"></a>
+        <a href="https://www.pinterest.com/imeshhirushan/_saved/"> <img alt=""
+                                                                        src="assets/images/icon/pinterest.png"></a>
     </div>
 
 </section>
 
 <!-- About Me -->
-<section class="coverPage">
+<section class="coverPage" id="aboutMe">
     <img alt="" src="assets/images/social/coverpages.png">
     <div class="headerText">
         <nav class="secondNavHeaderText">
             <ul class="ulHeader">
-                <li class="liHeader">Home</li>
-                <li class="liHeader">About Me</li>
-                <li class="liHeader">Skills</li>
-                <li class="liHeader">Projects</li>
-                <li class="liHeader">Activities</li>
-                <li class="liHeader">Contacts</li>
+                <li class="liHeader"><a href="#home">Home</a></li>
+                <li class="liHeader"><a href="#aboutMe">About Me</a></li>
+                <li class="liHeader"><a href="#skill">Skills</a></li>
+                <li class="liHeader"><a href="#projects">Projects</a></li>
+                <li class="liHeader"><a href="#activities">Activities</a></li>
+                <li class="liHeader"><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
     </div>
@@ -77,78 +79,188 @@
 
         <!-- Download CV Btn -->
         <button id="btnCv">
-            <span> <a download="myCv" href="assets/images/pdf/THARINDU%20IMESH%20CV.pdf">Download CV</a></span>
+            <span> <a download="IMESH HIRUSHAN"
+                      href="assets/images/pdf/THARINDU%20IMESH%20CV.pdf">Download CV</a></span>
         </button>
     </div>
 
 </section>
 
 <!--Skills-->
-<section class="coverPage">
+<section class="coverPage" id="skill">
     <img alt="" src="assets/images/social/coverpages.png">
     <div class="headerText">
         <nav class="secondNavHeaderText">
             <ul class="ulHeader">
-                <li class="liHeader">Home</li>
-                <li class="liHeader">About Me</li>
-                <li class="liHeader">Skills</li>
-                <li class="liHeader">Projects</li>
-                <li class="liHeader">Activities</li>
-                <li class="liHeader">Contacts</li>
+                <li class="liHeader"><a href="#home">Home</a></li>
+                <li class="liHeader"><a href="#aboutMe">About Me</a></li>
+                <li class="liHeader"><a href="#skill">Skills</a></li>
+                <li class="liHeader"><a href="#projects">Projects</a></li>
+                <li class="liHeader"><a href="#activities">Activities</a></li>
+                <li class="liHeader"><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
     </div>
+
+    <section id="Skills">
+        <div id="slider">
+            <div id="slid-con-div">
+
+                <div class="slid-div">
+                    <div class="img-div" id="img_1"></div>
+                </div>
+
+                <div class="slid-div">
+                    <div class="img-div" id="img_2"></div>
+                </div>
+
+                <div class="slid-div">
+                    <div class="img-div" id="img_3"></div>
+                </div>
+
+                <div class="slid-div">
+                    <div class="img-div" id="img_4"></div>
+                </div>
+
+                <div class="slid-div">
+                    <div class="img-div" id="img_5"></div>
+                </div>
+
+                <div class="slid-div">
+                    <div class="img-div" id="img_6"></div>
+                </div>
+
+                <div class="slid-div">
+                    <div class="img-div" id="img_7"></div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 </section>
 
 <!--Projects-->
-<section class="coverPage">
+<section class="coverPage" id="projects">
     <img alt="" src="assets/images/social/coverpages.png">
     <div class="headerText">
         <nav class="secondNavHeaderText">
             <ul class="ulHeader">
-                <li class="liHeader">Home</li>
-                <li class="liHeader">About Me</li>
-                <li class="liHeader">Skills</li>
-                <li class="liHeader">Projects</li>
-                <li class="liHeader">Activities</li>
-                <li class="liHeader">Contacts</li>
+                <li class="liHeader"><a href="#home">Home</a></li>
+                <li class="liHeader"><a href="#aboutMe">About Me</a></li>
+                <li class="liHeader"><a href="#skill">Skills</a></li>
+                <li class="liHeader"><a href="#projects">Projects</a></li>
+                <li class="liHeader"><a href="#activities">Activities</a></li>
+                <li class="liHeader"><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
     </div>
+
+
+    <div>
+        <p>layered Project</p>
+        <hr>
+    </div>
+
+
+    <!--  <div id="proSlider">
+          <div id="proSlid-con-div">
+
+              <div class="proSlid-div">
+                  <div id="pro_1" class="pro-div"></div>
+              </div>
+
+              <div class="proSlid-div">
+                  <div id="pro_2" class="pro-div"></div>
+              </div>
+
+              <div class="proSlid-div">
+                  <div id="pro_3" class="pro-div"></div>
+              </div>
+
+              <div class="proSlid-div">
+                  <div id="pro_4" class="pro-div"></div>
+              </div>
+
+              <div class="proSlid-div">
+                  <div id="pro_5" class="pro-div"></div>
+              </div>
+          </div>
+      </div>-->
+
 </section>
 
 <!--Activities-->
-<section class="coverPage">
+<section class="coverPage" id="activities">
     <img alt="" src="assets/images/social/coverpages.png">
     <div class="headerText">
         <nav class="secondNavHeaderText">
             <ul class="ulHeader">
-                <li class="liHeader">Home</li>
-                <li class="liHeader">About Me</li>
-                <li class="liHeader">Skills</li>
-                <li class="liHeader">Projects</li>
-                <li class="liHeader">Activities</li>
-                <li class="liHeader">Contacts</li>
+                <li class="liHeader"><a href="#home">Home</a></li>
+                <li class="liHeader"><a href="#aboutMe">About Me</a></li>
+                <li class="liHeader"><a href="#skill">Skills</a></li>
+                <li class="liHeader"><a href="#projects">Projects</a></li>
+                <li class="liHeader"><a href="#activities">Activities</a></li>
+                <li class="liHeader"><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
+        <div id="imgH2">
+
+        </div>
+
+        <div id="imgH3">
+
+        </div>
+
+        <div id="imgH4">
+
+        </div>
+
+        <div id="imgH5">
+
+        </div>
+
+        <div id="imgH6">
+        </div>
+
+        <div id="Himg">
+            <button class="tvSeries">
+                <span1>Tv Series</span1>
+            </button>
+
+            <button class="hobby">
+                <span2>Hobby</span2>
+            </button>
+
+            <button class="music">
+                <span3>Playing Guitar</span3>
+            </button>
+        </div>
+        <div id="imgH1">
+
+        </div>
+
+
     </div>
 </section>
 
 <!--Contacts-->
-<section class="coverPage">
+<section class="coverPage" id="contacts">
     <img alt="" src="assets/images/social/coverpages.png">
     <div class="headerText">
         <nav class="secondNavHeaderText">
             <ul class="ulHeader">
-                <li class="liHeader">Home</li>
-                <li class="liHeader">About Me</li>
-                <li class="liHeader">Skills</li>
-                <li class="liHeader">Projects</li>
-                <li class="liHeader">Activities</li>
-                <li class="liHeader">Contacts</li>
+                <li class="liHeader"><a href="#home">Home</a></li>
+                <li class="liHeader"><a href="#aboutMe">About Me</a></li>
+                <li class="liHeader"><a href="#skill">Skills</a></li>
+                <li class="liHeader"><a href="#projects">Projects</a></li>
+                <li class="liHeader"><a href="#activities">Activities</a></li>
+                <li class="liHeader"><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
     </div>
+
+
+
 </section>
 
 </body>
