--- a/index.html
+++ b/index.html
@@ -155,38 +155,30 @@
         </nav>
     </div>
 
+    <div id="proSlider">
+        <div id="proSlid-con-div">
 
-    <div>
-        <p>layered Project</p>
-        <hr>
+            <a href=""><div class="proSlid-div">
+                <div id="pro_1" class="pro-div"></div>
+            </div></a>
+
+            <a href=""><div class="proSlid-div">
+                <div id="pro_2" class="pro-div"></div>
+            </div></a>
+
+            <a href=""><div class="proSlid-div">
+                <div id="pro_3" class="pro-div"></div>
+            </div></a>
+
+            <a href=""><div class="proSlid-div">
+                <div id="pro_4" class="pro-div"></div>
+            </div></a>
+
+            <a href=""><div class="proSlid-div">
+                <div id="pro_5" class="pro-div"></div>
+            </div></a>
+        </div>
     </div>
-
-
-    <!--  <div id="proSlider">
-          <div id="proSlid-con-div">
-
-              <div class="proSlid-div">
-                  <div id="pro_1" class="pro-div"></div>
-              </div>
-
-              <div class="proSlid-div">
-                  <div id="pro_2" class="pro-div"></div>
-              </div>
-
-              <div class="proSlid-div">
-                  <div id="pro_3" class="pro-div"></div>
-              </div>
-
-              <div class="proSlid-div">
-                  <div id="pro_4" class="pro-div"></div>
-              </div>
-
-              <div class="proSlid-div">
-                  <div id="pro_5" class="pro-div"></div>
-              </div>
-          </div>
-      </div>-->
-
 </section>
 
 <!--Activities-->
@@ -203,6 +195,8 @@
                 <li class="liHeader"><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
+    </div>
+
         <div id="imgH2">
 
         </div>
@@ -236,10 +230,7 @@
             </button>
         </div>
         <div id="imgH1">
-
         </div>
-
-
     </div>
 </section>
 
