--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <li class="liHeader"><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
+        <div id="divAbout"><h2>About Me</h2></div>
     </div>
     <div>
         <img alt="" id="aboutMePic" src="assets/images/social/aboutMePic.JPG" width="300">
@@ -100,6 +101,7 @@
                 <li class="liHeader"><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
+        <div id="divSkills"><h2>Skill</h2></div>
     </div>
 
     <section id="Skills">
@@ -153,30 +155,41 @@
                 <li class="liHeader"><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
+        <div id="divPro"><h2>Projects</h2></div>
     </div>
 
     <div id="proSlider">
         <div id="proSlid-con-div">
 
-            <a href=""><div class="proSlid-div">
-                <div id="pro_1" class="pro-div"></div>
-            </div></a>
+            <a href="">
+                <div class="proSlid-div">
+                    <div class="pro-div" id="pro_1"></div>
+                </div>
+            </a>
 
-            <a href=""><div class="proSlid-div">
-                <div id="pro_2" class="pro-div"></div>
-            </div></a>
+            <a href="">
+                <div class="proSlid-div">
+                    <div class="pro-div" id="pro_2"></div>
+                </div>
+            </a>
 
-            <a href=""><div class="proSlid-div">
-                <div id="pro_3" class="pro-div"></div>
-            </div></a>
+            <a href="">
+                <div class="proSlid-div">
+                    <div class="pro-div" id="pro_3"></div>
+                </div>
+            </a>
 
-            <a href=""><div class="proSlid-div">
-                <div id="pro_4" class="pro-div"></div>
-            </div></a>
+            <a href="">
+                <div class="proSlid-div">
+                    <div class="pro-div" id="pro_4"></div>
+                </div>
+            </a>
 
-            <a href=""><div class="proSlid-div">
-                <div id="pro_5" class="pro-div"></div>
-            </div></a>
+            <a href="">
+                <div class="proSlid-div">
+                    <div class="pro-div" id="pro_5"></div>
+                </div>
+            </a>
         </div>
     </div>
 </section>
@@ -195,42 +208,43 @@
                 <li class="liHeader"><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
+        <div id="divAct"><h2>Activities</h2></div>
     </div>
 
-        <div id="imgH2">
+    <div id="imgH2">
 
-        </div>
+    </div>
 
-        <div id="imgH3">
+    <div id="imgH3">
 
-        </div>
+    </div>
 
-        <div id="imgH4">
+    <div id="imgH4">
 
-        </div>
+    </div>
 
-        <div id="imgH5">
+    <div id="imgH5">
 
-        </div>
+    </div>
 
-        <div id="imgH6">
-        </div>
+    <div id="imgH6">
+    </div>
 
-        <div id="Himg">
-            <button class="tvSeries">
-                <span1>Tv Series</span1>
-            </button>
+    <div id="Himg">
+        <button class="tvSeries">
+            <span1>Tv Series</span1>
+        </button>
 
-            <button class="hobby">
-                <span2>Hobby</span2>
-            </button>
+        <button class="hobby">
+            <span2>Hobby</span2>
+        </button>
 
-            <button class="music">
-                <span3>Playing Guitar</span3>
-            </button>
-        </div>
-        <div id="imgH1">
-        </div>
+        <button class="music">
+            <span3>Playing Guitar</span3>
+        </button>
+    </div>
+    <div id="imgH1">
+    </div>
     </div>
 </section>
 
@@ -248,8 +262,8 @@
                 <li class="liHeader"><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
+        <div id="divCon"><h2>Contacts</h2></div>
     </div>
-
 
 
 </section>
