--- a/index.html
+++ b/index.html
@@ -264,10 +264,63 @@
         </nav>
         <div id="divCon"><h2>Contacts</h2></div>
     </div>
+    <div id="contactDetail">
+        <h1 class="contactHead">HOW I CAN HELP</h1>
+        <h1 class="contactHead">YOU ?</h1>
+        <h2 class="contactFooter">Mandawala, Panadura , Wp</h2>
+        <h2 class="contactFooter">imeshhirushan2117@gmail.com</h2>
+        <h2 class="contactFooter"> +94 77 92 01 232</h2>
+    </div>
 
 
+    <div class="alignContactIcn">
+        <a href="https://twitter.com/imesh_57">
+            <img alt="Twitter" class="contactIcn" src="assets/images/contacts/twitter.png">
+        </a>
+        <a href="https://www.facebook.com/imesh.hirushan.98">
+            <img alt="FaceBook" class="contactIcn" src="assets/images/contacts/faceBook.png">
+        </a>
+        <a href="https://github.com/imeshhirushan2117">
+            <img alt="hitHub" class="contactIcn" src="assets/images/contacts/github.png">
+        </a>
+        <a href="https://www.instagram.com/_imesh_hirushan_/">
+            <img alt="Instagram" class="contactIcn" src="assets/images/contacts/instagram.png">
+        </a>
+        <a href="https://www.linkedin.com/in/imesh-hirushan-b2aab1224/">
+            <img alt="Linkedin" class="contactIcn" src="assets/images/contacts/linkedin.png">
+        </a>
+        <h1 id="before"></h1>
+        <h2 id="after"></h2>
+    </div>
+
+    <div id="chatBox">
+        <form action="" class="form-example" method="get">
+            <div>
+                <label class="lbl" for="name">Full Name </label><br>
+                <input class="inp" id="name" name="name" required type="text">
+            </div>
+            <br>
+            <div>
+                <label class="lbl" for="email">E-mail </label><br>
+                <input class="inp" id="email" name="email" required type="email">
+            </div>
+            <br>
+            <div>
+                <label class="lbl" for="Subject">Subject </label><br>
+                <input class="inp" id="subject" name="subject" required type="text">
+            </div>
+            <br>
+            <div>
+                <label class="lbl">Massage </label><br>
+                <textarea class="inp2" id="message" rows="7">
+                </textarea>
+            </div>
+            <div id="contactBtnDiv"><br>
+                <input id="contactBtn" type="submit" value="SEND">
+            </div>
+        </form>
+    </div>
 </section>
-
 </body>
 
 </html>
