--- a/myProject/cssFameWork/posSystem(Boostrap)/customer.html
+++ b/myProject/cssFameWork/posSystem(Boostrap)/customer.html
@@ -34,7 +34,6 @@
         </div>
     </nav>
 
-
 </header>
 <section class="container-fluid">
 
@@ -53,9 +52,12 @@
             </div>
         </div>
         <div class="col-12 col-md-5 col-lg-4 col-xl-6">
-            <button type="button" class="btn btn-danger" id="btnDelete" style="margin-bottom: -10px">Delete <i class="bi bi-trash"></i> </button>
-            <button type="button" class="btn btn-warning" id="btnClear" style="margin-bottom: -10px">Clear <i class="bi bi-backspace m-2"></i> </button>
-            <button type="button" class="btn btn-info" id="btnAdd" style="margin-bottom: -10px">Add <i class="bi bi-person-plus-fill m-2"></i></button>
+            <button class="btn btn-danger" id="btnDelete" style="margin-bottom: -10px" type="button">Delete <i
+                    class="bi bi-trash"></i></button>
+            <button class="btn btn-warning" id="btnClear" style="margin-bottom: -10px" type="button">Clear <i
+                    class="bi bi-backspace m-2"></i></button>
+            <button class="btn btn-info" id="btnAdd" style="margin-bottom: -10px" type="button">Add <i
+                    class="bi bi-person-plus-fill m-2"></i></button>
         </div>
         <div class="row">
             <div class="mb-3 col-6">
@@ -73,6 +75,28 @@
             <div class="mb-3 col-6">
                 <label class="form-label" for="txtCusTP">Customer Telephone Number</label>
                 <input class="form-control" id="txtCusTP" placeholder="Customer Telephone Number" type="text">
+            </div>
+        </div>
+        <div class="row align-items-center pt-3 ">
+            <div class="col-12 mt-2">
+                <div class="table-responsive" style="height: 70vh">
+                    <table class="table table-success table-striped">
+                        <thead>
+                        <tr>
+                            <th scope="col">Customer ID</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Address</th>
+                            <th scope="col">Telephone</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+
+
+
+
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
