--- a/myProject/cssFameWork/posSystem(Boostrap)/order.html
+++ b/myProject/cssFameWork/posSystem(Boostrap)/order.html
@@ -5,6 +5,7 @@
     <title>Order</title>
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -30,8 +31,11 @@
             </div>
         </div>
     </nav>
-
-
+    <section class="container-fluid">
+        <div class="rounded-3 p-3" style="background-color: green; margin-top: 30px;">
+            <h1 class="text-center mb-3"><i class="bi bi-bag-check-fill"></i>Order Form</h1>
+        </div>
+    </section>
 
 </header>
 
