SPA System Done

--- a/myProject/SPA/item.html
+++ b/myProject/SPA/item.html
@@ -19,13 +19,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="customer.html">Customer</a>
+                        <a id="clickCustomer" class="nav-link" aria-current="page">Customer</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="item.html">Item</a>
+                        <a id="clickItem" class="nav-link active">Item</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="order.html">Order</a>
+                        <a id="clickOrder" class="nav-link">Order</a>
                     </li>
                 </ul>
             </div>
