--- a/myProject/SPA/item.html
+++ b/myProject/SPA/item.html
@@ -33,6 +33,7 @@
     </nav>
 </header>
 <main class="container">
+
     <section id="item" class="container-fluid">
         <div class="rounded-3 p-3" style="background-color: green; margin-top: 30px;">
             <h1 class="text-center mb-3"><i class="bi bi-box-seam"></i>Item Form</h1>
@@ -96,7 +97,6 @@
             </div>
         </div>
     </section>
-
     <section id="customer">
         <div class="rounded-3 p-3" style="background-color: green; margin-top: 30px;">
             <h1 class="text-center mb-3"><i class="bi bi-people-fill m-2"></i>Customer Form</h1>
@@ -168,7 +168,7 @@
             <div class="col-12 col-lg-4">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <div class="modal-header justify-content-center bg-warning">
+                        <div class="modal-header justify-content-center bg-success">
                             <h4 class="modal-title fw-bold">Invoice Details</h4>
                         </div>
                         <div class="modal-body">
@@ -215,7 +215,7 @@
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <div class="modal-header justify-content-center bg-warning">
+                        <div class="modal-header justify-content-center bg-success">
                             <h4 class="modal-title fw-bold">Item Select</h4>
                         </div>
                         <div class="modal-body">
@@ -252,7 +252,7 @@
                                 </div>
                             </div>
                             <div class="row mt-3 mb-1">
-                                <button class="btn btn-primary" type="button">Add Item</button>
+                                <button class="btn btn-primary" type="button" style="background-color: #4AC29A" >Add Item</button>
                             </div>
                         </div>
                     </div>
@@ -312,7 +312,7 @@
         <div class="row">
             <div class="table-responsive" style="height: 40vh;">
                 <table class="table table-striped">
-                    <thead class="" style="background-color: #f39c12;">
+                    <thead class="" style="background-color: #16a085;">
                     <tr>
                         <th>Item Code</th>
                         <th>Item Name</th>
