--- a/myProject/cssFameWork/posSystem(Boostrap)/order.html
+++ b/myProject/cssFameWork/posSystem(Boostrap)/order.html
@@ -269,7 +269,7 @@
         <div class="col-12 col-lg-4">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <div class="modal-header justify-content-center bg-warning">
+                    <div class="modal-header justify-content-center bg-success">
                         <h4 class="modal-title fw-bold">Invoice Details</h4>
                     </div>
                     <div class="modal-body">
@@ -316,7 +316,7 @@
         <div class="col-12 col-md-6 col-lg-4">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <div class="modal-header justify-content-center bg-warning">
+                    <div class="modal-header justify-content-center bg-success">
                         <h4 class="modal-title fw-bold">Item Select</h4>
                     </div>
                     <div class="modal-body">
@@ -353,7 +353,7 @@
                             </div>
                         </div>
                         <div class="row mt-3 mb-1">
-                            <button class="btn btn-primary" type="button">Add Item</button>
+                            <button class="btn btn-primary" style="background-color: #4AC29A" type="button">Add Item</button>
                         </div>
                     </div>
                 </div>
@@ -413,7 +413,7 @@
     <div class="row">
         <div class="table-responsive" style="height: 40vh;">
             <table class="table table-striped">
-                <thead class="" style="background-color: #f39c12;">
+                <thead class="" style="background-color: #16a085;">
                 <tr>
                     <th>Item Code</th>
                     <th>Item Name</th>
