--- a/myProject/SPA/item.html
+++ b/myProject/SPA/item.html
@@ -355,7 +355,7 @@
 </main>
 <script src="assets/jquery/jquery-3.6.0.min.js"></script>
 <script src="assets/js/javaScript.js"></script>
-<script src="assets/jquery/jQuery.js"></script>
-<script  src="assets/db/DB.js"> </script>
+<script src="contraller/customerController.js"></script>
+<script  src="db/DB.js"> </script>
 </body>
 </html>
