--- a/myProject/cssFameWork/posSystem(Boostrap)/order.html
+++ b/myProject/cssFameWork/posSystem(Boostrap)/order.html
@@ -22,7 +22,7 @@
                         <a class="nav-link " aria-current="page" href="customer.html">Customer</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="item.html">Item</a>
+                        <a class="nav-link" href="index.html">Item</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="order.html">Order</a>
